<resources>
    <string name="app_name">SMU_blood</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_ok">확인하기</string>
    <string name="button_skip">건너뛰기</string>
    <string name="application1">헌혈 신청 전 주의사항!</string>
    <string name="application2">신청 후에는 되돌릴 수 없습니다.\n 수혈 요청자를 위해 신중하게 작성해주세요.\n\n* 신청 완료 후 지정 헌혈 요청자의 상세 정보는 마이페이지에서 확인 가능합니다.</string>
    <string name="application3">본인의 혈액형과 일치하는지 확인하셨나요?</string>
    <string name="application4">네, 확인했습니다.</string>
    <string name="application_name">본인 성명(필수)</string>
    <string name="application_contact">본인 연락처(필수)</string>
    <string name="edittext_application_contack">연락처를 입력해주세요.</string>
    <string name="edittext_application_name">이름을 입력해주세요.</string>
    <string name="application_confirm">확인</string>
    <string name="application5">나의 헌혈 신청 일시가 헌혈 요청자에게 공개됩니다.</string>
    <string name="application_title">긴급 헌혈 신청</string>
    <string name="review_title">후기게시판</string>
    <string name="board_tv1">님, 다른 사람을 위해</string>
    <string name="board_tv2">후기를 작성해보는건 어떤가요?</string>
    <string name="board_tv3">내가 작성한 글은 꾹 눌러서 삭제할 수 있어요</string>
    <string name="board_tv4">내가 쓴 글</string>
    <string name="bregister_tv1">글쓰기</string>
    <string name="bregister_tv2">등록</string>
    <string name="bregister_tv3">제목</string>
    <string name="bregister_tv4">본문을 작성해주세요.</string>
    <string name="apply_tv1">헌혈하러 가기</string>
    <string name="bwriting_tv1">후기게시판</string>
    <string name="acard_tv1">지정 헌혈 기록 카드</string>
    <string name="acard_tv2">요청 기록</string>
    <string name="acard_tv3">신청 기록</string>
    <string name="acard_tv4">헌혈 요청자 정보</string>
    <string name="acard_tv5">*환자 개인정보는 열람 기한이 지났습니다.</string>
    <string name="acard_tv6">나의 신청 정보</string>
    <string name="rcard_tv1">지정 헌혈 기록 카드</string>
    <string name="rcard_tv2">요청 기록</string>
    <string name="rcard_tv3">신청 기록</string>
    <string name="rcard_tv4">헌혈 신청자 정보</string>
    <string name="rcard_tv5">나의 요청 정보</string>
    <string name="login_bling">BLING</string>
    <string name="login_id">아이디</string>
    <string name="login_pwd">비밀번호</string>
    <string name="login_tv1">로그인</string>
    <string name="login_tv2">회원가입하기</string>
    <string name="main_tv1">긴급 지정 헌혈</string>
    <string name="main_tv2">지금 당장</string>
    <string name="main_tv3">긴급 헌혈</string>
    <string name="main_tv4">이</string>
    <string name="main_tv6">필요하신가요?</string>
    <string name="main_tv5">지정 헌혈 요청하러 가기</string>
    <string name="main_tv7">지정 헌혈 요청</string>
    <string name="main_tv8">업데이트 순</string>
    <string name="rmain_tv1">지정 헌혈 요청</string>
    <string name="rmain_tv2">혈액형 (필수)</string>
    <string name="rmain_tv3">A</string>
    <string name="rmain_tv4">B</string>
    <string name="rmain_tv5">O</string>
    <string name="rmain_tv6">AB</string>
    <string name="rmain_tv7">Rh- 혈액형인 경우는 체크해주세요</string>
    <string name="rmain_tv8">헌혈 종류 (필수)</string>
    <string name="rmain_tv9">전혈</string>
    <string name="rmain_tv10">혈소판</string>
    <string name="rmain_tv11">백혈구</string>
    <string name="rmain_tv12">농축적혈구</string>
    <string name="rmain_tv13">백혈구 여과제거 적혈구</string>
    <string name="rmain_tv14">병원 (필수)</string>
    <string name="rmain_tv15">병실 호수 (필수)</string>
    <string name="rmain_tv16">병실 호수를 입력해주세요</string>
    <string name="rmain_tv17">환자 성명 (필수)</string>
    <string name="rmain_tv18">환자 성명을 입력해주세요</string>
    <string name="rmain_tv19">환자 등록번호 (선택)</string>
    <string name="rmain_tv20">환자 등록번호를 입력해주세요</string>
    <string name="rmain_tv21">보호자 연락처 (필수)</string>
    <string name="rmain_tv22">보호자 연락처를 입력해주세요</string>
    <string name="rmain_tv23">요청 시작일 (필수)</string>
    <string name="rmain_tv24">YY/MM/DD</string>
    <string name="rmain_tv25">ex) 21/10/08</string>
    <string name="rmain_tv26">요청 마감일 (필수)</string>
    <string name="rmain_tv27">YY/MM/DD</string>
    <string name="rmain_tv28">ex) 21/10/15</string>
    <string name="rmain_tv29">요청 사연 (선택)</string>
    <string name="rmain_tv30">요청 사연을 입력해주세요</string>
    <string name="rmain_tv31">등록</string>
    <string name="mod_tv1">수정하기</string>
    <string name="mod_tv2">아이디</string>
    <string name="mod_tv3">아이디는 수정이 불가능합니다.</string>
    <string name="mod_tv4">기존 비밀번호</string>
    <string name="mod_tv5">기존 비밀번호를 입력해주세요</string>
    <string name="mod_tv6">변경 비밀번호</string>
    <string name="mod_tv7">변경하실 비밀번호를 입력해주세요</string>
    <string name="apply_tv2">지정 헌혈 요청</string>
    <string name="mod_tv8">변경 비밀번호 확인</string>
    <string name="mod_tv9">비밀번호를 다시 입력해주세요</string>
    <string name="mod_tv10">비밀번호가 일치하지 않습니다.</string>
    <string name="mod_tv11">닉네임</string>
    <string name="mod_tv12">변경하실 닉네임을 입력해주세요</string>
    <string name="mod_tv13">수정하기</string>
    <string name="page_tv1">마이페이지</string>
    <string name="page_tv2">내 정보</string>
    <string name="page_tv3">수정하기</string>
    <string name="page_tv4">아이디 :</string>
    <string name="page_tv5">닉네임 :</string>
    <string name="page_tv6">내 혈액형 :</string>
    <string name="page_tv7">전자문진하러 가기</string>
    <string name="page_tv8">헌혈 기록 카드 확인하기</string>
    <string name="page_tv9">서비스 이용약관</string>
    <string name="page_tv10">개인정보 처리방침</string>
    <string name="page_tv11">로그아웃하기</string>
    <string name="page_tv12">탈퇴하기</string>
    <string name="su_tv1">회원가입</string>
    <string name="su_tv2">아이디</string>
    <string name="su_tv3">사용 중인 이메일입니다.</string>
    <string name="su_tv4">사용 가능한 \'이메일\'을 입력해주세요</string>
    <string name="su_tv5">비밀번호</string>
    <string name="su_tv6">비밀번호를 입력해주세요</string>
    <string name="su_tv7">비밀번호 확인</string>
    <string name="su_tv8">비밀번호를 다시 입력해주세요</string>
    <string name="su_tv9">비밀번호가 일치하지 않습니다.</string>
    <string name="su_tv10">닉네임</string>
    <string name="su_tv11">닉네임을 입력해주세요</string>
    <string name="su_tv12">사용 중인 닉네임입니다.</string>
    <string name="su_tv13">혈액형</string>
    <string name="su_tv14">A</string>
    <string name="su_tv15">B</string>
    <string name="su_tv16">O</string>
    <string name="su_tv17">AB</string>
    <string name="su_tv18">Rh- 혈액형인 경우는 체크해주세요</string>
    <string name="su_tv19">계정 생성</string>
    <string name="splash_tv">BLING</string>
    <string name="req_confirm_tv">헌혈 요청이 완료되었습니다.</string>
    <string name="req_confirm_tv2">확인</string>
    <string name="app_confirm_tv1">긴급 헌혈 신청이 완료되었습니다.\n상세 정보는 마이페이지에서\n확인할 수 있습니다.</string>
    <string name="check_tv1">헌혈 가능한 상태인지 확인해보세요.</string>
    <string name="location_tv1">위치를 확인하기 위해서는 기기 설정에서\n GPS 접근 권한을 허용해야 합니다.</string>
    <string name="location_tv2">닫기</string>
    <string name="logout_alert_tv">탈퇴 후 모든 정보가 사라집니다.\n정말 탈퇴하시겠습니까?</string>
    <string name="logout_alert_skip">취소</string>
    <string name="logout_alert_ok">확인</string>
    <string name="logout_alert_tv1">로그아웃하시겠습니까?</string>
    <string name="withdraw_tv1">탈퇴 후 모든 정보가 사라집니다.\n정말 탈퇴하시겠습니까?</string>
    <string name="withdraw_not">취소하기</string>
    <string name="withdraw_withdraw">탈퇴하기</string>
    <string name="blring_tv">BLRING</string>
    <string name="splash_blring">BLRING</string>
    <string name="mhos_search_hos">병원 찾기</string>
    <string name="btv_tv">내가 쓴 글</string>
    <string name="request_record">요청 기록 카드</string>
    <string name="apply_record">신청 기록 카드</string>
    <string name="ltv_id_type">ex) abc@naver.com</string>
    <string name="total_person">신청자 총 2명</string>
    <string name="tv_login_ing">로그인 유지</string>
    <string name="apply_reject_tv">이미 신청한 헌혈 요청입니다.\n다른 헌혈 요청에 신청해주세요.</string>
    <string name="board_delete_confirm_tv">삭제되었습니다.</string>
    <string name="board_delete_reject_tv">삭제 불가능한 게시물입니다.</string>
    <string name="card_request_end">요청 완료</string>
    <string name="card_request_end_btn">요청 그만하기</string>
    <string name="board_register_body_et">본문을 작성해주세요.</string>
    <string name="card_request_end_confirm_tv">요청이 마감되었습니다.</string>
    <string name="notification_channel_id">fcm_default_channel</string>
    <string name="default_notification_channel_name">Blood_Donation_Application</string>
    <string name="notification_content_text">헌혈 요청글에 헌혈이 신청되었습니다.</string>
</resources>