<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_mod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mod_tv1"
        android:textSize="19sp"
        android:textColor="@color/black"
        android:fontFamily="@font/notosans_regular"
        android:includeFontPadding="false"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        />
    <TextView
        android:id="@+id/mtv_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_mod"
        android:text="@string/mod_tv2"
        android:textColor="@color/black"
        android:textSize="13sp"
        android:fontFamily="@font/notosans_regular"
        android:includeFontPadding="false"
        android:layout_marginStart="18dp"
        />
    <TextView
        android:id="@+id/mtv_id2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="3dp"
        android:textSize="12sp"
        tools:text="smumosquito"
        android:fontFamily="@font/notosans_light"
        android:includeFontPadding="false"
        android:paddingStart="10dp"
        android:background="@drawable/bg_id_grey"
        app:layout_constraintTop_toBottomOf="@id/mtv_id"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:gravity="center_vertical"
        />
    <TextView
        android:id="@+id/mtv_nid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mod_tv3"
        android:textSize="12sp"
        android:fontFamily="@font/notosans_light"
        android:includeFontPadding="false"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mtv_id2"
        android:layout_marginTop="5dp"
        android:layout_marginStart="18dp"
        />
    <TextView
        android:id="@+id/mtv_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mtv_nid"
        android:text="@string/mod_tv4"
        android:textSize="13sp"
        android:textColor="@color/black"
        android:fontFamily="@font/notosans_regular"
        android:includeFontPadding="false"
        android:layout_marginStart="18dp"
        />
    <EditText
        android:id="@+id/met_pwd"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/mod_tv5"
        android:textColor="#7c7c7c"
        android:fontFamily="@font/notosans_light"
        android:includeFontPadding="false"
        android:background="@drawable/bg_edittext_color_change"
        android:layout_marginTop="3dp"
        android:textSize="12sp"
        android:paddingStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/mtv_pwd"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp" />
    <TextView
        android:id="@+id/mtv_pwd2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/met_pwd"
        android:text="@string/mod_tv6"
        android:textSize="13sp"
        android:textColor="@color/black"
        android:fontFamily="@font/notosans_regular"
        android:includeFontPadding="false"
        android:layout_marginStart="18dp"
        />

    <EditText
        android:id="@+id/met_pwd2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="3dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/notosans_light"
        android:includeFontPadding="false"
        android:hint="@string/mod_tv7"
        android:textColor="#7c7c7c"
        android:textSize="12sp"
        android:paddingStart="10dp"
        android:background="@drawable/bg_edittext_color_change"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mtv_pwd2"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/mtv_pwd3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/met_pwd2"
        android:text="@string/mod_tv8"
        android:textSize="13sp"
        android:textColor="@color/black"
        android:fontFamily="@font/notosans_regular"
        android:includeFontPadding="false"
        android:layout_marginStart="18dp"
        />

    <EditText
        android:id="@+id/met_pwd3"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="3dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/notosans_light"
        android:includeFontPadding="false"
        android:hint="@string/mod_tv9"
        android:textColor="#7c7c7c"
        android:textSize="12sp"
        android:paddingStart="10dp"
        android:background="@drawable/bg_edittext_color_change"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mtv_pwd3" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mod_tv10"
        android:textColor="@color/red"
        android:textSize="10sp"
        android:fontFamily="@font/notosans_light"
        android:includeFontPadding="false"
        app:layout_constraintTop_toBottomOf="@id/met_pwd2"
        app:layout_constraintLeft_toRightOf="@id/mtv_pwd3"
        android:layout_marginTop="31dp"
        android:layout_marginStart="16dp"
        />

    <TextView
        android:id="@+id/mtv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/met_pwd3"
        android:text="@string/mod_tv11"
        android:textSize="13sp"
        android:textColor="@color/black"
        android:fontFamily="@font/notosans_regular"
        android:includeFontPadding="false"
        android:layout_marginStart="18dp"
        />
    <EditText
        android:id="@+id/met_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/mod_tv12"
        android:textColor="#7c7c7c"
        android:fontFamily="@font/notosans_light"
        android:includeFontPadding="false"
        android:layout_marginTop="3dp"
        android:textSize="12sp"
        android:paddingStart="10dp"
        android:background="@drawable/bg_edittext_color_change"
        app:layout_constraintTop_toBottomOf="@id/mtv_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        />

    <Button
        android:id="@+id/btn_mod2"
        android:layout_width="107dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@drawable/bg_btn_red_5dp"
        android:fontFamily="@font/notosans_regular"
        android:gravity="center"
        android:text="@string/mod_tv13"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/met_name" />
</androidx.constraintlayout.widget.ConstraintLayout>