<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.map.MapApplicationActivity">

    <TextView
        android:id="@+id/btv_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/application_title"
        android:textSize="19sp"
        android:textColor="@color/black"
        android:fontFamily="@font/notosans_regular"
        android:includeFontPadding="false"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/notosans_bold"
        android:includeFontPadding="false"
        android:text="@string/application1"
        android:textColor="@color/red"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btv_text" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/notosans_regular"
        android:text="@string/application2"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:includeFontPadding="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/notosans_regular"
        android:text="@string/application3"
        android:includeFontPadding="false"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <CheckBox
        android:id="@+id/n_checkbox"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="9dp"
        android:background="@drawable/redcheck"
        android:button="@null"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView4" />

    <TextView
        android:id="@+id/notice_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginTop="7dp"
        android:fontFamily="@font/notosans_light"
        android:includeFontPadding="false"
        android:textColor="@color/black"
        android:text="네, 확인했습니다."
        android:textSize="12sp"
        app:layout_constraintLeft_toRightOf="@id/n_checkbox"
        app:layout_constraintTop_toBottomOf="@id/textView4" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/notosans_regular"
        android:text="@string/application5"
        android:textColor="@color/black"
        android:textSize="13sp"
        android:includeFontPadding="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/n_checkbox" />

    <CheckBox
        android:id="@+id/n_checkbox2"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="9dp"
        android:background="@drawable/redcheck"
        android:button="@null"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView7" />

    <TextView
        android:id="@+id/notice_tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginTop="7dp"
        android:fontFamily="@font/notosans_light"
        android:includeFontPadding="false"
        android:textColor="@color/black"
        android:text="네, 확인했습니다."
        android:textSize="12sp"
        app:layout_constraintLeft_toRightOf="@id/n_checkbox2"
        app:layout_constraintTop_toBottomOf="@id/textView7" />


    <Button
        android:id="@+id/notice_okay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:background="@drawable/bg_btn_black"
        android:fontFamily="@font/notosans_light"
        android:text="@string/application_confirm"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notice_tv2" />



</androidx.constraintlayout.widget.ConstraintLayout>